--- a/code/index.html
+++ b/code/index.html
@@ -119,6 +119,7 @@
 
     <footer>
       <p>© 2020 Sofia Vaz Sousa 🦊</p>
+      <img src="./img/logo.svg" alt="technigo logo"/>
     </footer>
   </body>
 </html>
