Correct typo footer

--- a/code/index.html
+++ b/code/index.html
@@ -120,7 +120,7 @@
     <footer>
       <p>© 2020 Sofia Vaz Sousa 🦊</p>
       <img src="./img/logo.svg" alt="technigo logo"/>
-      <p>Project developed duting the Technigo frontend development bootcamp</p>
+      <p>Project developed during the Technigo frontend development bootcamp</p>
     </footer>
   </body>
 </html>
