card titles, monthly cloud alignment fixed

--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,7 @@
       <div></div>
     </div>
     <img class="logo-full" src="./cc_logo.png" alt="Cloud Club logo">
-    <img class="logo-ico" src="./cc_ico.png" alt="Cloud Club logo">
+    <img class="logo-ico" src="./cc_ico.png" alt="Cloud Club logo mini">
     <nav>
       <a href="#">About</a>
       <a href="#">Support</a>
@@ -45,93 +46,103 @@
       <p>Test your knowledge by flipping the cards.</p>
 
       <section class="cloud-cards">
-        <a class="high" href="#">
+        <!-- Cirrus, Ci -->
+        <div class="high">
+          <h4>CIRRUS (Ci)</h4>
           <img src="ci.jpeg" alt="image">
           <p class="content">Detached clouds in the form of white, delicate filaments or white or mostly white patches
             or narrow bands. These clouds have a fibrous (hair-like) appearance, or a silky sheen, or both.</p>
           <p>HIGH LEVEL</p>
-          <!-- Cirrus, Ci -->
-        </a>
+        </div>
 
-        <a class="high" href="#">
+        <!-- Cirrocumulus, Cc -->
+        <div class="high">
+          <h4>CIRROCUMULUS (Cc)</h4>
           <img src="cc.jpeg" alt="image">
           <p class="content">Thin, white patch, sheet or layer of cloud without shading, composed of very small elements
             in the form of grains, ripples, etc., merged or separate, and more or less regularly arranged; most of the
             elements have an apparent width of less than 1°.</p>
           <p>HIGH LEVEL</p>
-          <!-- Cirrocumulus, Cc -->
-        </a>
+        </div>
 
-        <a class="high" href="#">
+        <!-- Cirrostratus, Cs -->
+        <div class="high">
+          <h4>CIRROSTRATUS (Cs)</h4>
           <img src="cs.jpeg" alt="image">
           <p class="content">Transparent, whitish cloud veil of fibrous (hair-like) or smooth appearance, totally or
             partly covering the sky, and generally producing halo phenomena.</p>
           <p>HIGH LEVEL</p>
-          <!-- Cirrostratus, Cs -->
-        </a>
+        </div>
 
-        <a class="med" href="#">
+        <!-- Altocumulus, Ac -->
+        <div class="med">
+          <h4>ALTOCUMULUS (Ac)</h4>
           <img src="ac.jpeg" alt="image">
           <p class="content">White or grey, or both white and grey, patch, sheet or layer of cloud, generally with
             shading, composed of laminae (a layer or layers), rounded masses, rolls, etc., which are sometimes partly
             fibrous or diffuse and which may or may not be merged; most of the regularly arranged small elements usually
             have an apparent width of between 1° and 5°.</p>
           <p>MEDIUM LEVEL</p>
-          <!-- Altocumulus, Ac -->
-        </a>
+        </div>
 
-        <a class="med" href="#">
+        <!-- Altostratus, As -->
+        <div class="med">
+          <h4>ALTOSTRATUS (As)</h4>
           <img src="as.jpeg" alt="image">
           <p class="content">Greyish or bluish cloud sheet or layer of striated (grooves or channels in cloud
             formations, arranged parallel to the flow of the air), fibrous or uniform appearance, totally or partly
             covering the sky, and having parts thin enough to reveal the Sun at least vaguely, as through ground glass
             or frosted glass. This type does not show halo phenomena.</p>
           <p>MEDIUM LEVEL</p>
-          <!-- Altostratus, As -->
-        </a>
+        </div>
 
-        <a class="med" href="#">
+        <!-- Nimbostratus, Ns -->
+        <div class="med">
+          <h4> NIMBOSTRATUS (Ns)</h4>
           <img src="ns.jpeg" alt="image">
           <p class="content">Grey cloud layer, often dark, the appearance of which is made diffuse by more or less
             continuously falling rain or snow, which in most cases reaches the ground. It is thick enough throughout to
             blot out the Sun.</p>
           <p>Low, ragged clouds frequently occur below the layer, with which they may or may not merge.</p>
           <p>MEDIUM LEVEL</p>
-          <!-- Nimbostratus, Ns -->
-        </a>
+        </div>
 
-        <a class="low" href="#">
+        <!-- Stratocumulus, Sc-->
+        <div class="low">
+          <h4> STRATOCUMULUS (Sc)</h4>
           <img src="sc.jpeg" alt="image">
           <p class="content">Grey or whitish, or both grey and whitish, patch, sheet or layer of cloud that almost
             always has dark parts, composed of tessellations, rounded masses, rolls, etc., which are non-fibrous (except
             for virga) and which may or may not be merged; most of the regularly arranged small elements have an
             apparent width of more than 5°.</p>
           <p>LOW LEVEL</p>
-          <!-- Stratocumulus, Sc-->
-        </a>
+        </div>
 
-        <a class="low" href="#">
+        <!-- Stratus, St-->
+        <div class="low">
+          <h4> STRATUS (St)</h4>
           <img src="st.jpeg" alt="image">
           <p class="content">Generally grey cloud layer with a fairly uniform base, which may give drizzle, snow or snow
             grains. When the Sun is visible through the cloud, its outline is clearly discernible. This type does not
             produce halo phenomena except, possibly, at very low temperatures.</p>
           <p>Sometimes this type appears in the form of ragged patches.</p>
           <p>LOW LEVEL</p>
-          <!-- Stratus, St-->
-        </a>
+        </div>
 
-        <a class="low" href="#">
+        <!-- Cumulus, Cu -->
+        <div class="low">
+          <h4> CUMULUS (Cu)</h4>
           <img src="cu.jpeg" alt="image">
           <p class="content">Detached clouds, generally dense and with sharp outlines, developing vertically in the form
             of rising mounds, domes or towers, of which the bulging upper part often resembles a cauliflower. The sunlit
             parts of these clouds are mostly brilliant white; their bases are relatively dark and nearly horizontal.</p>
-          >
           <p>Sometimes this type is ragged.</p>
           <p>LOW LEVEL</p>
-          <!-- Cumulus, Cu -->
-        </a>
+        </div>
 
-        <a class="low" href="#">
+        <!-- Cumulonimbus, Cb -->
+        <div class="low">
+          <h4> CUMULONIMBUS (Cb)</h4>
           <img src="cb.jpeg" alt="image">
           <p class="content">Heavy and dense cloud, with a considerable vertical extent, in the form of a mountain or
             huge towers. At least part of its upper portion is usually smooth, or fibrous or striated, and nearly always
@@ -139,15 +150,12 @@
           <p>Under the base of this cloud, which is often very dark, there are frequently low ragged clouds either
             merged with it or not, and precipitation sometimes in the form of virga.</p>
           <p>LOW LEVEL</p>
-          <!-- Cumulonimbus, Cb -->
-        </a>
-
+        </div>
       </section>
     </section>
-
     <footer>
       <p><span style='font-size:25px;'>&#129418;</span></p>
-      <p>This page was made by Peggy @<a href="https://blipsandclicks.com">blipsandclicks<a> for educational purposes.
+      <p>This page was made by Peggy @<a href="https://blipsandclicks.com">blipsandclicks</a> for educational purposes.
       </p>
       <p>Images and content from the <a href="https://cloudatlas.wmo.int/en/home.html">International Cloud Atlas</a>.
       </p>
