finished design and responsivness for mobile devices

--- a/code/index.html
+++ b/code/index.html
@@ -11,13 +11,17 @@
 
      <!-- Some kind of logo and navbar in the header -->
     <header>
+   
         <img src="HealthyHackLogo.gif" class="logo" alt="HealthHackLogo">
         <h1>HEALTH HACK</h1>
           <a href="#home" class="linkleft">Home</a>
           <a href="#news" class="linkleft">News</a>
           <a href="#contact" class="linkright">Contact</a>
           <a href="#about" class="linkright">About</a>
+
     </header>
+
+    
       
     <section class="big-news">
       <img src="cloudberry.jpg" alt="cloudberry">
@@ -65,7 +69,8 @@
       </div>
     </section>
 
-    <footer>By Elisa (my first individual project as a student at Technigo Front End Boot Camp).
+    <footer>
+      <p>By Elisa (my first individual project as a student at Technigo Front End Boot Camp).</p>
     </footer>
   </body>
 </html>
