Redid Flexbox structure

--- a/code/index.html
+++ b/code/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Alright!</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style2.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+
+      <!-- Logo and navbar -->
       <img src="Images/Resurs3.png" alt="Backstreet News Logo" />
       <nav>
         <a href="#">Brian</a>
@@ -25,55 +26,56 @@
     </header>
 
     <main>
-      <!-- The big news content -->
-      <section class="big-news">
-        <section class="container">
-          <img src="Images/bsb_group.jpg" alt="Backstreet Boys Image">
-          <div>
-            <h2>Backstreet's back, alright!</h2>
-            <p>Student poll shows Brian is the most popular Backstreet Boy</p>
-          </div>  
-        </section>
-      </section>
 
+      <!-- The big news content -->
+      <section class="big-news row">
+        <img src="Images/bsb_group.jpg" alt="Backstreet Boys Image">
+        <div>
+          <h2>Backstreet's back, alright!</h2>
+          <p>Student poll shows Brian is the most popular Backstreet Boy</p>
+        </div>
+      </section>
+      
       <!-- The other news  -->
-      <section class="article-news-container">
-        <section class="container">
+      <section class="article-news">
+        <div>
           <h3>A blast from the past</h3>
           <p>What is your favourite Backstreet Boys' logo?</p>
-          <section class="article-news">
-            <a href="#">
-              <article>
-                <img src="Images/bsblogo2.png" alt="Backstreet Boys Logo">
-                <h4>This is one logo</h4>
-                <div></div>
-              </article>
-            </a>
-            <a href="#">
-              <article>
-                <img src="Images/bsblogo3.png" alt="Backstreet Boys Logo">
-                <h4>This is one logo</h4>
-                <div></div>
-              </article>
-            </a>
-            <a href="#">
-              <article>
-                <img src="Images/bsblogo4.png" alt="Backstreet Boys Logo">
-                <h4>This is one logo</h4>
-                <div></div>
-              </article>
-            </a> 
-            <a href="#"> 
-              <article>
-                <img src="Images/bsblogo5.png" alt="Backstreet Boys Logo">
-                <h4>This is one logo</h4>
-                <div></div>
-              </article>
-            </a>
-          </section>
+        </div>
+        <section class="row">
+          <a href="#">
+            <article>
+              <img src="Images/bsblogo2.png" alt="Backstreet Boys Logo">
+              <h4>This is one logo</h4>
+              <div></div>
+            </article>
+          </a>
+          <a href="#">
+            <article>
+              <img src="Images/bsblogo3.png" alt="Backstreet Boys Logo">
+              <h4>This is one logo</h4>
+              <div></div>
+            </article>
+          </a>
+          <a href="#">
+            <article>
+              <img src="Images/bsblogo4.png" alt="Backstreet Boys Logo">
+              <h4>This is one logo</h4>
+              <div></div>
+            </article>
+           </a> 
+           <a href="#"> 
+            <article>
+              <img src="Images/bsblogo5.png" alt="Backstreet Boys Logo">
+              <h4>This is one logo</h4>
+              <div></div>
+            </article>
+          </a>
         </section>
       </section>
-    </main>
+    </main> 
+
+    <!-- Footer -->
     <footer></footer>
   </body>
 </html>
