fixed big news section

--- a/code/index.html
+++ b/code/index.html
@@ -29,9 +29,9 @@
     <section class="big-news-container">
       <!-- The big news content -->
       <div class="big-news-card">
-        <img class="img-big-news" src="./images/boat-1.jpg" alt="boat one" />
+        <img src="./images/boat-1.jpg" alt="boat one" />
       </div>
-      <div class="big-news-card">
+      <div class="big-news-card big-news-card-grow">
         <h2>Big news - Skepp Ohoj!</h2>
         <p>
           Lorem ipsum dolor sit amet, debitis disputando at ius, ea usu nullam
