--- a/code/index.html
+++ b/code/index.html
@@ -15,46 +15,50 @@
     <img src="./OlflånLogo.svg" alt="Logo Oldflån">
     <h1>Oldflån // Season // Magazine</h1>
   </header>
-  <nav>
+  <nav class="menu">
     <a href="#">Summer</a>
     <a href="#">Autumn</a>
     <a href="#">Winter</a>
     <a href="#">Spring</a>
   </nav>
-  <main>
-  <!-- Head news -->
-  <section>
-   <div class="head-news">
-      <img src="./nöjdfjället2.jpeg" alt="nöjdfjället">
-      <h2> New hiking trail between Ansätten and Önrun</h2>
-      <p>Leden upp till fjället Önrun i Åkersjön är lätt att vandra och man kommer högt upp och kan njuta av milsvid
-        utsikt. Önrun sägs ha ”Sveriges vidaste vy”. Toppen ligger på 856 möh.Leden upp till fjället Önrun i Åkersjön är
-        lätt att vandra och man kommer högt upp och kan njuta av milsvid utsikt. Önrun sägs ha ”Sveriges vidaste vy”.
-        Toppen ligger på 856 möh.</p>
-   </div> 
-   <div class="head-news">
-      <img src="./nöjdfjället.jpeg" alt="nöjdfjället">
-      <h2> Nature is blooming along the Flower Trail to Ansätten</h2>
-      <p>Leden upp till fjället Önrun i Åkersjön är lätt att vandra och man kommer högt upp och kan njuta av milsvid
-        utsikt. Önrun sägs ha ”Sveriges vidaste vy”. Toppen ligger på 856 möh.Leden upp till fjället Önrun i Åkersjön är
-        lätt att vandra och man kommer högt upp och kan njuta av milsvid utsikt. Önrun sägs ha ”Sveriges vidaste vy”.
-        Toppen ligger på 856 möh.</p>
-   </div>
-  </section>
-  <!-- News boxes -->
-  <section>
-    <div class="news-box">
-      <h3>Oldflån <img src="./nöjdfjället.jpeg" alt="nöjdfjället"> </h3>
-    </div>
-    <div class="news-box">
-      <h3>Oldflån <img src="./nöjdfjället.jpeg" alt="nöjdfjället"></h3>
-    </div>
-    <div class="news-box">
-      <h3>Oldflån <img src="./nöjdfjället.jpeg" alt="nöjdfjället"> </h3>
-    </div>
-
-  </section>
-  </main>
+    <!-- Head news -->
+    <section class="head-news-container">
+      <div class="head-news">
+        <h2> New hiking trail between Ansätten and Önrun</h2>
+        <img src="./nöjdfjället2.jpeg" alt="nöjdfjället">
+        <p>Leden upp till fjället Önrun i Åkersjön är lätt att vandra och man kommer högt upp och kan njuta av milsvid
+          utsikt. Önrun sägs ha ”Sveriges vidaste vy”. Toppen ligger på 856 möh.Leden upp till fjället Önrun i Åkersjön
+          är lätt att vandra och man kommer högt upp och kan njuta av milsvid utsikt. Önrun sägs ha ”Sveriges vidaste vy”.
+          Toppen ligger på 856 möh.</p>
+      </div>
+      <div class="head-news">
+        <h2> Nature is blooming along the Flower Trail to Ansätten</h2>
+        <img src="./nöjdfjället.jpeg" alt="nöjdfjället">
+        <p>Leden upp till fjället Önrun i Åkersjön är lätt att vandra och man kommer högt upp och kan njuta av milsvid
+          utsikt. Önrun sägs ha ”Sveriges vidaste vy”. Toppen ligger på 856 möh.Leden upp till fjället Önrun i Åkersjön
+          är lätt att vandra och man kommer högt upp och kan njuta av milsvid utsikt. Önrun sägs ha ”Sveriges vidaste vy”.
+          Toppen ligger på 856 möh.</p>
+      </div>
+    </section>
+    <!-- News boxes -->
+    <section class="news-box-container">
+      <div class="news-box">
+        <img src="./Marmott.jpeg" alt="nöjdfjället">
+        <h3 class="box-text">Tent Buying Guide</h3>
+      </div>
+      <div class="news-box">
+        <img src="./food.jpeg" alt="nöjdfjället">
+        <h3 class="box-text">Cooking in the Wild</h3>
+      </div>
+      <div class="news-box">
+        <img src="./backpack.jpeg" alt="nöjdfjället">
+        <h3 class="box-text">Packing list for Hiking</h3>
+      </div>
+      <div class="news-box">
+        <img src="./hjortron.jpeg" alt="nöjdfjället">
+        <h3 class="box-text">Ready to Pick</h3>
+      </div>
+    </section>
   <!-- Footer -->
   <footer>
   </footer>
