--- a/code/index.html
+++ b/code/index.html
@@ -14,6 +14,7 @@
 
   <header>
     <img src="LogoFooderWithText.png" alt="Fooder Logo">
+    <img class="logo" src="LogoFooder.png" alt="Fooder Logo">
     <h1>Fooder Magazine</h1>
     <h2>Get the latest bites of news from the foodie community</h2>
   
@@ -33,8 +34,7 @@
 
 
   <main>
-  <section class="big-news">
-    <article>
+    <article class="big-news">
       <img src="pictures/bigkitchen.jpg" alt="Restaurant kitchen">
       <p>Lorem ipsum dolor sit amet consectetur adipiscing elit nunc, lectus vestibulum aenean a montes commodo vitae,
         taciti dictum maecenas rhoncus diam convallis sollicitudin. Malesuada ultrices eget diam ridiculus facilisis
@@ -43,7 +43,6 @@
         convallis mus dignissim ante magna, purus nulla lacinia conubia accumsan egestas velit integer gravida
         hendrerit metus elementum.</p>
     </article>
-  </section>
 
 
   <section class="card-container">
