--- a/code/index.html
+++ b/code/index.html
@@ -9,20 +9,17 @@
   </head>
   <body>
 
-     <!-- Some kind of logo and navbar in the header -->
+     <!-- Header with logo, sitename and navbar -->
     <header>
-   
-        <img src="HealthyHackLogo.gif" class="logo" alt="HealthHackLogo">
-        <h1>HEALTH HACK</h1>
-          <a href="#home" class="linkleft">Home</a>
-          <a href="#news" class="linkleft">News</a>
-          <a href="#contact" class="linkright">Contact</a>
-          <a href="#about" class="linkright">About</a>
-
+      <img src="HealthyHackLogo.gif" class="logo" alt="HealthHackLogo">
+      <h1>HEALTH HACK</h1>
+      <a href="#home" class="linkleft">Home</a>
+      <a href="#news" class="linkleft">News</a>
+      <a href="#contact" class="linkright">Contact</a>
+      <a href="#about" class="linkright">About</a>
     </header>
-
-    
       
+    <!-- Sections with news/cards-->
     <section class="big-news">
       <img src="cloudberry.jpg" alt="cloudberry">
       <div class="big-news-text">
@@ -69,6 +66,7 @@
       </div>
     </section>
 
+     <!-- Footer -->
     <footer>
       <p>By Elisa (my first individual project as a student at Technigo Front End Boot Camp).</p>
     </footer>
