--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project 2: The News Site</title>
+  <title>The New Forker</title>
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
 </head>
@@ -16,11 +16,11 @@
       <div></div>
       <div></div>
     </div>
-    <img class="header-image" src="The_New_Yorker_Logo.svg" alt="The New Yorker logo" />
+    <img class="header-image" src="./The_New_Yorker_Logo.svg" alt="The New Yorker logo" />
     <nav>
       <a href="#">Books & Culture</a>
       <a href="#">Crossword</a>
-      <a href="#"><img class="nav-image" src="The_New_Yorker_Logo.svg" alt="The New Yorker logo" /></a> <!--odstrani, ce ne deluje-->
+      <a href="#"><img class="nav-image" src="./The_New_Yorker_Logo.svg" alt="The New Yorker logo" /></a> <!--odstrani, ce ne deluje-->
       <a href="#">Goings On</a>
       <a href="#">Fiction & Poetry</a>
     </nav>
@@ -104,9 +104,9 @@
   </main>
   <footer>
     <p>- author - 
-      <br><b>Rebeka Kovačič</b>
+      <br><b>rebkova</b>
       <br>Frontend Developer in the making 
-      <br>Technigo student 
+      <br>Technigo student
       <br><b>email:</b> example@email.com</p>
   </footer>
 </body>
