Cleaning up and also started the design and responsivness for desktop devices

--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
      <!-- Header with logo, sitename and navbar -->
     <header>
       <img src="HealthyHackLogo.gif" class="logo" alt="HealthHackLogo">
-      <h1>HEALTH HACK</h1>
+      <h1>HEALTH HACK NEWS</h1>
       <a href="#home" class="linkleft">Home</a>
       <a href="#news" class="linkleft">News</a>
       <a href="#contact" class="linkright">Contact</a>
