Finished desktop design and responsivness, so everything finished, maybe do some details changes so it looks better

--- a/code/index.html
+++ b/code/index.html
@@ -13,10 +13,12 @@
     <header>
       <img src="HealthyHackLogo.gif" class="logo" alt="HealthHackLogo">
       <h1>HEALTH HACK NEWS</h1>
-      <a href="#home" class="linkleft">Home</a>
-      <a href="#news" class="linkleft">News</a>
-      <a href="#contact" class="linkright">Contact</a>
-      <a href="#about" class="linkright">About</a>
+      <div class="links"></div>
+        <a href="#home" class="linkleft">Home</a>
+        <a href="#news" class="linkleft">News</a>
+        <a href="#contact" class="linkright">Contact</a>
+        <a href="#about" class="linkright">About</a>
+      <div>
     </header>
       
     <!-- Sections with news/cards-->
