--- a/code/index.html
+++ b/code/index.html
@@ -15,22 +15,23 @@
   <header>
     <img src="LogoFooderWithText.png" alt="Fooder Logo">
     <img class="logo" src="LogoFooder.png" alt="Fooder Logo">
-    <h1>Fooder Magazine</h1>
+    <div class="container"><h1>Fooder Magazine</h1>
     <h2>Get the latest bites of news from the foodie community</h2>
-  
-    <nav>
-      <div class="hamburger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
-      <ul class="nav-links">
-        <li class="link"><a href="#">Home</a></li>
-        <li class="link"><a href="#">Archive</a></li>
-        <li class="link"><a href="#">Contact</a></li>
-      </ul>
-    </nav>
+    </div>
   </header>
+  
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+    <ul class="nav-links">
+      <li class="link"><a href="#">Home</a></li>
+      <li class="link"><a href="#">Archive</a></li>
+      <li class="link"><a href="#">Contact</a></li>
+    </ul>
+  </nav>
 
 
   <main>
