Adjusted .big-news

--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,7 @@
     <h2>Get the latest bites of news from the foodie community</h2>
     </div>
   </header>
-  
+
   <nav>
     <div class="hamburger">
       <div class="line"></div>
@@ -37,12 +37,14 @@
   <main>
     <article class="big-news">
       <img src="pictures/bigkitchen.jpg" alt="Restaurant kitchen">
+      <div class="big-news-text"><h2>Jennies fusion-corner big success</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipiscing elit nunc, lectus vestibulum aenean a montes commodo vitae,
         taciti dictum maecenas rhoncus diam convallis sollicitudin. Malesuada ultrices eget diam ridiculus facilisis
         faucibus at tincidunt mollis, ad libero vivamus ante pretium laoreet montes odio vestibulum, mi cubilia augue
         placerat eros fringilla velit vel. Est et maecenas habitant lobortis aliquet senectus porttitor volutpat
         convallis mus dignissim ante magna, purus nulla lacinia conubia accumsan egestas velit integer gravida
         hendrerit metus elementum.</p>
+      </div>
     </article>
 
 
