added small news section and hover effects

--- a/code/index.html
+++ b/code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>The News Site</title>
+    <title>&#127846 CupcakeMania</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- Link for google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -13,9 +13,9 @@
     <!-- Header with logo and navbar -->
     <header>
       <a>
-        <img class="menu" src="menu_icon.svg" alt="menu image">
+        <img class="menu" src="./Images/menu_icon.svg" alt="menu image">
       </a>
-      <img class="logo" src="logo.svg" alt="logo">
+      <div class="logo"></div>
 
       <nav>
         <div>
@@ -33,7 +33,7 @@
     <section class="big-news">
       <h1>NEWS NEWS NEWS!!!!</h1>
       <div>
-        <img src="big-news.jpg" alt="water image">
+        <img src="./Images/pic2_unsplash.jpg" alt="water image">
         <p>
           "Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
           sed do eiusmod tempor incididunt ut labore et dolore magna 
@@ -47,19 +47,44 @@
       </div>
     </section>
 
-    <br>
-    <hr>
-
     <!-- SMALL NEWS SECTION  -->
     <section class="small-news-container">
-      <div class="grid-1"></div>
-      <div class="grid-2"></div>
-      <div class="grid-3"></div>
-      <div class="grid-4"></div>
-      <div class="grid-5"></div>
-      <div class="grid-6"></div>
-      <div class="grid-7"></div>
-      <div class="grid-8"></div>
+      <div class="grid-1 grid">
+        <img src="./Images/pic1_unsplash.jpg" alt="">
+        <p>Sprinkles will take your cupcakes to the next level.</p>
+      </div>
+      <div class="grid-2 grid">
+        <img src="./Images/pic3_unsplash.jpg" alt="">
+        <p>The perfect cupcakes for your birthday? Here's what you need to know!</p>
+      </div>
+      <div class="grid-3">
+        <img src="./Images/pic4_unsplash.jpg" alt="">
+        <p>Find out how to make the tastiest frosting.</p>
+      </div>
+      <div class="grid-4">
+        <img src="./Images/pic5_unsplash.jpg" alt="">
+        <p>News 4</p>
+      </div>
+      <div class="grid-5">
+        <img src="./Images/pic6_unsplash.jpg" alt="">
+        <p>How to get the perfect swirls on your cupcakes!<a>Read More</a></p>
+      </div>
+      <div class="grid-6">
+        <img src="./Images/pic7_unsplash.jpg" alt="">
+        <p>There is a cupcake for every occasion!<a>Read More</a></p>
+      </div>
+      <div class="grid-7">
+        <img src="./Images/pic8_unsplash.jpg" alt="">
+        <p>hOW TO PERFECT</p>
+      </div>
+      <div class="grid-8">
+        <img src="./Images/pic9_unsplash.jpg" alt="">
+        <p>News 8</p>
+      </div>
     </section>
+
+    <footer>
+      <p>Technigo project 2, the news site, by Anna Hellqvist</p>
+    </footer>
   </body>
 </html>
