--- a/code/index.html
+++ b/code/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>POSITIVE NEWS</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- HEADER -->
     <header class="header-parent">
         <div class= "header-child">
-            <h1>Hello</h1>
+            <img src="" alt="">
+            <h1>POSITIVE NEWS</h1>
         </div>
     </header>
 
