--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
        <!-- Some kind of logo and navbar -->
-      <img class= "icon" src ="icon-corona-black.png" alt="Corona virus">
+      <img class= "icon" src ="./icon-corona-black.png" alt="Corona virus">
       <h1> hashtagCORONA</h1>
       <nav>
         <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">WHO</a>
@@ -24,7 +24,7 @@
 
     <section class="big-news">
       <!-- The big news content -->
-        <img src="corona_bignews.jpg" alt="Corona virus">
+        <img src="./corona_bignews.jpg" alt="Corona virus">
         <div class="news"><p>According to the CDC, there is no specific antiviral treatment recommended for infection with novel coronavirus. Anyone infected with the virus should receive supportive care to help relieve symptoms.The CDC recommends the following prevention measures:
           Wash your hands often with soap and water for at least 20 seconds. If soap and water are not available, use an alcohol-based hand sanitizer.
           Avoid touching your eyes, nose, and mouth with unwashed hands
@@ -33,25 +33,25 @@
           Cover your cough or sneeze with a tissue, then throw the tissue in the trash.</p></div>
     </section>
     <div class="news_cards">
-      <div class="card"><img src="corona_1.jpg" alt="corona picture 1">Text</div>
-      <div class="card"><img src="corona_2.jpg" alt="corona picture 2">Text</div>
-      <div class="card"><img src="corona_3.jpg" alt="corona picture 3">Text</div>
-      <div class="card"><img src="corona_4.jpg" alt="corona picture 3">Text</div>
-      <div class="card"><img src="corona_5.jpg" alt="corona picture 3">Text</div>
-      <div class="card"><img src="corona_6.jpg" alt="corona picture 3">Text</div>
-      <div class="card"><img src="corona_7.jpg" alt="corona picture 3">Text</div>
-      <div class="card"><img src="corona_8.jpg" alt="corona picture 3">Text</div>
+      <div class="card"><img src="./corona_1.jpg" alt="Stay at home">How to handle Corona from home</div>
+      <div class="card"><img src="./corona_2.jpg" alt="Corona game">What does the most of us do at home</div>
+      <div class="card"><img src="./corona_3.jpg" alt="Social distancing"> Keep your distance</div>
+      <div class="card"><img src="./corona_4.jpg" alt="Social distancing"> Keep your distance</div>
+      <div class="card"><img src="./corona_5.jpg" alt="Mask and hand alcohol">Can we prevent Corona?</div>
+      <div class="card"><img src="./corona_6.jpg" alt="Mask">Can masks prevent the spreding of Corona ?</div>
+      <div class="card"><img src="./corona_7.jpg" alt="Coronavirus">Where did the Corona virus come from?</div>
+      <div class="card"><img src="./corona_8.jpg" alt="Pills">Can vitamins prevent Corona? </div>
     </div>
     
     <footer>
         <div class="instagram">
-        <a href="https://www.instagram.com/marjaana_star/?hl=en" target="_blank"><img src="instagram-icon.png" alt="Click to visit us on Instagram"></a>
+        <a href="https://www.instagram.com/marjaana_star/?hl=en" target="_blank"><img src="./instagram-icon.png" alt="Click to visit us on Instagram"></a>
       </div>
       <div class="github">
-        <a href="https://github.com/MayaBlixt" target="_blank"><img src="Github_icon.png" alt="Click to visit us on Github"></a>
+        <a href="https://github.com/MayaBlixt" target="_blank"><img src="./Github_icon.png" alt="Click to visit us on Github"></a>
       </div>
       <div class="linkedin">
-        <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" target="_blank"><img src="linkedin_icon.png" alt="Click to visit me on Linkedin"></a>
+        <a href="https://www.linkedin.com/in/marjaana-tienaho-0576b915/" target="_blank"><img src="./linkedin_icon.png" alt="Click to visit me on Linkedin"></a>
       </div>
       </footer>
   </body>
