--- a/code/index.html
+++ b/code/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Noto+Serif+JP:wght@500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>POSITIVE NEWS</title>
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
     <!-- HEADER -->
     <header class="header-parent">
         <div class= "header-child">
-            <img src="" alt="">
+            <img src="Heart-speechbubbble.svg" alt="Image of positive news logo">
             <h1>POSITIVE NEWS</h1>
         </div>
     </header>
