--- a/code/index.html
+++ b/code/index.html
@@ -63,9 +63,9 @@
 
     <div class="article-one">
         <div class="card">
-          <img src="IMG_1111.jpg" alt="Hexbot image">
+          <img src="pexels-pixabay-73821.jpg" alt="Hexbot image">
           <div class="fadedbox">
-            <div class="title text"><button>NEWS</button> 
+            <div class="title text"><button>Article</button> 
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
             Charikar north of
            </p>
           <div class="fadedbox">
-            <div class="title text"><button>NEWS</button> </div>
+            <div class="title text"><button>Article</button> </div>
           </div>
         </div>
       </div>
